--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "esbuild-register": "^3.6.0",
     "tsup": "^8.4.0",
     "typescript": "^5.7.2",
-    "vitest": "^3.0.8"
+    "vitest": "3.0.8"
   }
 }
